test/tests/stages/18_structures/valid/parameters/libraries/pass_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: pair
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: x
            Int: 
          CMemberDeclaration: 
            TIdentifier: y
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: validate_struct_param
        List[1]: 
          TIdentifier: p
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Structure: 
              TIdentifier: pair
              Bool: 0
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: validate_struct_param
        List[1]: 
          TIdentifier: p
        CB: 
          List[2]: 
            CS: 
              CIf: 
                CBinary: 
                  COr: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: x
                      CVar: 
                        TIdentifier: p
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: y
                      CVar: 
                        TIdentifier: p
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 0
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 1
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Structure: 
              TIdentifier: pair
              Bool: 0
          Int: 
        None: 
